--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ python = "^3.6"
 click = "^6.0"
 minilog = "^1.5"
 flask_restful = "^0.3.8"
+phidget22 = "^1.6.20200426"
 
 [tool.poetry.dev-dependencies]
 
