--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,10 +33,10 @@ python = "^3.6.1"
 
 # TODO: Remove these and add your library's requirements
 click = "^6.0"
-minilog = "^1.5"
 flask_restful = "^0.3.8"
 phidget22 = "^1.6.20200426"
 pandas = "^1.1.0"
+loguru = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
 
