--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,19 +29,19 @@ include = ["vicon_nexus_unity_stream_py/static/index.html"]
 
 [tool.poetry.dependencies]
 
-python = ">=3.6.1,<4.0"
+python = ">=3.8,<4.0"
 
 # TODO: Remove these and add your library's requirements
-click = "^6.0"
+click = "^8.1.3"
 flask_restful = "^0.3.8"
 phidget22 = "^1.6.20200426"
-pandas = "^1.1.0"
-loguru = "^0.5.3"
+pandas = "^1.5.1"
+loguru = "^0.5.0"
+Flask-RESTful = "^0.3.9"
 
 [tool.poetry.dev-dependencies]
 
 # Formatters
-black = "19.10b0"
 isort = "4.3.21"
 
 # Linters
@@ -50,10 +50,10 @@ pydocstyle = "*"
 pylint = { git = "https://github.com/PyCQA/pylint", rev = "e169e83e52fedc6624235d45e8e8737294a0fedf" } # use 2.4.5 when released
 
 # Testing
-pytest = "^5.3.2"
+pytest = ">7.0"
 pytest-cov = "*"
 pytest-describe = { git = "https://github.com/pytest-dev/pytest-describe", rev = "453aa9045b265e313f356f1492d8991c02a6aea6" } # use 2.0 when released
-pytest-expecter = "^2.1"
+pytest-expecter = "*"
 pytest-random = "*"
 freezegun = "*"
 
@@ -61,7 +61,7 @@ freezegun = "*"
 coveragespace = "^3.1.1"
 
 # Documentation
-mkdocs = "~1.0"
+mkdocs = ">=1.2.3"
 pygments = "^2.5.2"
 
 # Tooling
