--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ pandas = "^1.5.1"
 loguru = "^0.5.0"
 Flask-RESTful = "^0.3.9"
 msgpack = "^1.0.4"
+alive-progress = "^2.4.1"
 
 [tool.poetry.dev-dependencies]
 
